--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -24,19 +24,40 @@ a:hover {
 .quill {
   margin-top: 20px;
   width: 100%;
+  border-radius: 4px;
 }
 
-.quill > .ql-container{
+.ql-container{
   min-height: 150px;
   background-color: #424242;
+  border-radius: 4px;
+  border: solid 1px grey;
 }
 
-.quill > .ql-container > .ql-editor.ql-blank::before{
+.ql-container:hover{
+  border: solid 1px white;
+}
+
+.quill > .ql-container > .ql-editor.ql-blank::before{ 
   color: #bfbaba;
 }
 
+ .ql-container::after{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: """";
+  border-radius: 4px;
+  pointer-events: none;
+}
+
+.quill:focus-within .ql-container::after{
+   box-shadow: 0 0 0 2px #8b70d2
+}
+
 .ql-editor {
-  border: solid 1px grey;
   border-radius: 5px;
   overflow-y: scroll;
   font-family: "Saira";
