agregado de emoji picker y agregado de traduccion a sus categorias

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -19,6 +19,14 @@ a:hover {
   text-decoration: none;
 }
 
+
+/* estilos para el emoji picker*/
+
+.emoji-picker-react{
+  margin: 5px auto 0px;
+  box-shadow: none !important;
+}
+
 /*testeando estilo para el quill*/
 
 .quill {
