--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -102,63 +102,7 @@ a:hover {
   padding-bottom: 50px;
 }
 
-
-.notification-enter {
-  opacity: 0;
-}
-.v-enter-active {
-  opacity: 1;
-}
-.notification-exit {
-  opacity: 1;
-}
-.notification-exit-active {
-  transform: translateX(20rem);
-  opacity: 0;
-  transition: 0.6s all;
-}
-
-
-.userInfo-enter {
-  opacity: 0;
-  transform: scale(0);
-}
-.userInfo-enter-active {
-  opacity: 1;
-  transform: scale(1);
-  transition: 0.3s all;
-}
-.userInfo-exit {
-  opacity: 1
-}
-.userInfo-exit-active {
-  opacity: 0;
-  transform: scale(0);
-  transition: 0.3s all;
-};
-
-
-.comment-enter {
-  opacity: 0;
-  transform: translateX(-40rem);
-}
-.comment-enter-active {
-  opacity: 1;
-  transform: translateX(0rem);
-  transition: 0.5s ease;
-}
-.comment-exit {
-  opacity: 1
-}
-.comment-exit-active {
-  opacity: 0;
-  transform: translateX(20rem);
-  transition: 0.5s ease;
-}
-
-
-
-
+/*animaciones*/
 @keyframes drop {
   0% {
     opacity: 0;
@@ -252,6 +196,58 @@ a:hover {
   }
 }
 
+/*clases react-transition-group*/
+.notification-enter {
+  opacity: 0;
+}
+.v-enter-active {
+  opacity: 1;
+}
+.notification-exit {
+  opacity: 1;
+}
+.notification-exit-active {
+  transform: translateX(20rem);
+  opacity: 0;
+  transition: 0.6s all;
+}
+
+.userInfo-enter {
+  opacity: 0;
+  transform: scale(0);
+}
+.userInfo-enter-active {
+  opacity: 1;
+  transform: scale(1);
+  transition: 0.3s all;
+}
+.userInfo-exit {
+  opacity: 1
+}
+.userInfo-exit-active {
+  opacity: 0;
+  transform: scale(0);
+  transition: 0.3s all;
+};
+
+.comment-enter {
+  opacity: 0;
+  transform: translateX(-40rem);
+}
+.comment-enter-active {
+  opacity: 1;
+  transform: translateX(0rem);
+  transition: 0.5s ease;
+}
+.comment-exit {
+  opacity: 1
+}
+.comment-exit-active {
+  opacity: 0;
+  transform: translateX(20rem);
+  transition: 0.5s ease;
+}
+
 .updateProfileFields-enter {
   opacity: 0;
   transform: rotateX(180deg);
@@ -285,7 +281,19 @@ a:hover {
   transition: 0.8s all;
 };
 
+.search-bar-enter {
+  transition: 0.3s ease-in-out;
+  transform: translateX(100%);
+}
+.search-bar-enter-active {
+  transform: translateX(0%);
+  transition: 0.3s ease-in-out;
+}
 
+.search-bar-exit-active {
+  transform: translateX(-100%);
+  transition: 0.3s ease-in-out;
+};
 
 
 
